--- a/index.html
+++ b/index.html
@@ -5,110 +5,222 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>نظام تسجيل حضور العمال</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
+        /* Reset Styles */
+        * {
+            margin: 0;
             padding: 0;
-            direction: rtl;
-            text-align: center;
-        }
-        h1 {
-            color: #333;
-        }
-        form {
-            margin-top: 20px;
-            display: inline-block;
-            text-align: right;
-        }
-        label {
-            margin-top: 10px;
-            display: block;
-        }
-        input[type="text"], input[type="number"], select, textarea {
-            width: 100%;
-            padding: 8px;
-            margin: 5px 0;
             box-sizing: border-box;
         }
-        button {
+
+        body {
+            font-family: Arial, sans-serif;
+            direction: rtl;
+            text-align: center;
+            background-color: #f9f9f9;
+            color: #333;
+            padding: 20px;
+        }
+
+        h1 {
+            color: #2c3e50;
+            margin-bottom: 20px;
+        }
+
+        .navbar {
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        .navbar button {
+            margin: 5px;
             padding: 10px 20px;
-            background-color: #28a745;
+            background-color: #3498db;
             color: white;
             border: none;
             cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .navbar button:hover {
+            background-color: #2980b9;
+        }
+
+        form {
+            background: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            max-width: 500px;
+            margin: 0 auto;
+        }
+
+        label {
+            display: block;
             margin-top: 10px;
+            font-weight: bold;
         }
-        button:hover {
-            background-color: #218838;
+
+        input[type="text"], input[type="number"], input[type="date"], input[type="time"], textarea {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            transition: border-color 0.3s ease;
         }
+
+        input[type="text"]:focus, input[type="number"]:focus, input[type="date"]:focus, input[type="time"]:focus, textarea:focus {
+            border-color: #3498db;
+        }
+
         .worker-row {
             display: flex;
             justify-content: space-between;
-            margin-bottom: 10px;
             align-items: center;
+            margin-bottom: 10px;
+            flex-wrap: wrap;
         }
+
         .worker-row label {
-            width: 100px;
+            width: 100%;
+            text-align: right;
+            margin-bottom: 5px;
         }
+
         .worker-row input[type="radio"] {
             margin-right: 10px;
         }
-        .worker-row input[type="time"] {
-            width: auto;
+
+        button {
+            padding: 10px 20px;
+            background-color: #2ecc71;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
         }
+
+        button:hover {
+            background-color: #27ae60;
+        }
+
         #result {
             margin-top: 20px;
             font-size: 18px;
             color: green;
+            font-weight: bold;
         }
+
         .page {
             display: none;
         }
+
         .page.active {
             display: block;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            form {
+                padding: 15px;
+            }
+
+            .worker-row {
+                flex-direction: column;
+                align-items: flex-end;
+            }
+
+            .worker-row label {
+                width: 100%;
+                margin-bottom: 10px;
+            }
         }
     </style>
 </head>
 <body>
+    <!-- شريط الأزراع (ثابت في جميع الصفحات) -->
+    <div class="navbar">
+        <button onclick="goToHome()">الصفحة الرئيسية</button>
+        <button onclick="goBack()">الرجوع</button>
+    </div>
+
     <!-- الصفحة الأولى -->
     <div id="page1" class="page active">
         <h1>اختيار التاريخ</h1>
-        <label>اختر اليوم والشهر والسنة:</label>
-        <input type="date" id="selectedDate" required><br>
-        <label>تاريخ اليوم:</label>
-        <input type="text" id="todayDate" readonly><br>
-        <button onclick="navigateToPage('page2')">التالي</button>
+        <form>
+            <label>اختر اليوم والشهر والسنة:</label>
+            <input type="date" id="selectedDate" required><br>
+            <label>تاريخ اليوم:</label>
+            <input type="text" id="todayDate" readonly><br>
+            <button onclick="navigateToPage('page2'); return false;">التالي</button>
+        </form>
     </div>
 
     <!-- الصفحة الثانية -->
     <div id="page2" class="page">
         <h1>أسماء العمال</h1>
-        <label for="numWorkers">عدد العمال:</label>
-        <input type="number" id="numWorkers" min="1" required><br>
-        <button onclick="generateWorkerInputs()">إضافة العمال</button>
-        <div id="workersContainer"></div>
-        <button id="nextButton" style="display: none;" onclick="navigateToPage('page3')">التالي</button>
+        <form>
+            <label for="numWorkers">عدد العمال:</label>
+            <input type="number" id="numWorkers" min="1" required><br>
+            <button onclick="generateWorkerInputs(); return false;">إضافة العمال</button>
+            <div id="workersContainer"></div>
+            <button id="nextButton" style="display: none;" onclick="navigateToPage('page3'); return false;">التالي</button>
+        </form>
     </div>
 
     <!-- الصفحة الثالثة -->
     <div id="page3" class="page">
         <h1>طبيعة العمل</h1>
-        <div id="workDetailsContainer"></div>
-        <button onclick="saveAttendance()">حفظ القائمة</button>
+        <form>
+            <div id="workDetailsContainer"></div>
+            <button onclick="saveAttendance(); return false;">حفظ القائمة</button>
+        </form>
         <div id="result"></div>
     </div>
 
     <script>
+        // متغير لتخزين الصفحات التي تم الوصول إليها
+        let visitedPages = [];
+        let currentPage = 'page1';
+
         // عرض تاريخ اليوم
         const today = new Date();
         const todayDate = document.getElementById('todayDate');
         todayDate.value = `${today.getFullYear()}-${String(today.getMonth() + 1).padStart(2, '0')}-${String(today.getDate()).padStart(2, '0')}`;
 
-        // التنقل بين الصفحات
+        // التنقل بين الصفحات مع تخزين الصفحة الحالية
         function navigateToPage(pageId) {
             const pages = document.querySelectorAll('.page');
             pages.forEach(page => page.classList.remove('active'));
+
+            // إذا كانت الصفحة الجديدة مختلفة عن الصفحة الحالية، أضف الصفحة الحالية إلى المصفوفة
+            if (currentPage !== pageId) {
+                visitedPages.push(currentPage);
+            }
+
+            // تحديث الصفحة الحالية
+            currentPage = pageId;
+
+            // عرض الصفحة الجديدة
             document.getElementById(pageId).classList.add('active');
+        }
+
+        // زر الرجوع
+        function goBack() {
+            if (visitedPages.length > 0) {
+                const previousPage = visitedPages.pop(); // استعادة الصفحة السابقة من المصفوفة
+                navigateToPage(previousPage);
+            } else {
+                alert("لا يمكنك الرجوع أكثر من ذلك!");
+            }
+        }
+
+        // زر الصفحة الرئيسية
+        function goToHome() {
+            visitedPages = []; // تفريغ المصفوفة
+            navigateToPage('page1');
         }
 
         // إنشاء خانات أسماء العمال
